--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vegas",
 	"version": "0.0.0-development",
 	"private": true,
-	"packageManager": "pnpm@8.9.2",
+	"packageManager": "pnpm@8.10.4",
 	"scripts": {
 		"preinstall": "npx only-allow pnpm",
 		"prepare": "husky install",
@@ -12,8 +12,8 @@
 		"test": "pnpm test:integration && pnpm test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"lint:fix": "prettier --plugin-search-dir . --write . && eslint . --fix",
+		"lint": "prettier --check . && eslint .",
+		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
@@ -26,77 +26,77 @@
 		"i18n:compile": "node i18n/merge.js && paraglide-js compile --outdir src/lib/shared/i18n/compiled"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.8.1",
-		"@commitlint/config-conventional": "^17.8.1",
-		"@commitlint/cz-commitlint": "^17.8.1",
-		"@commitlint/prompt-cli": "^17.8.1",
-		"@directus/sdk": "^12.1.0",
+		"@commitlint/cli": "^18.4.1",
+		"@commitlint/config-conventional": "^18.4.0",
+		"@commitlint/cz-commitlint": "^18.4.1",
+		"@commitlint/prompt-cli": "^18.4.1",
+		"@directus/sdk": "^13.0.1",
 		"@histoire/plugin-svelte": "^0.17.4",
 		"@iconify/svelte": "^3.1.4",
 		"@inlang/paraglide-js": "1.0.0-prerelease.9",
 		"@macfja/svelte-persistent-store": "^2.4.1",
-		"@melt-ui/pp": "^0.1.2",
-		"@melt-ui/svelte": "^0.53.0",
+		"@melt-ui/pp": "^0.1.4",
+		"@melt-ui/svelte": "^0.61.1",
 		"@notionhq/client": "^2.2.13",
 		"@playwright/test": "^1.39.0",
 		"@radix-ui/colors": "^3.0.0",
-		"@supabase/ssr": "^0.0.9",
+		"@supabase/ssr": "^0.0.10",
 		"@supabase/supabase-js": "^2.38.4",
-		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-auto": "^2.1.1",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
-		"@sveltejs/kit": "^1.27.1",
-		"@tailwindcss/forms": "^0.5.6",
+		"@sveltejs/kit": "^1.27.5",
+		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.10",
-		"@tanstack/svelte-query": "^4.36.1",
-		"@trpc/client": "^10.43.0",
-		"@trpc/server": "^10.43.0",
-		"@types/convict": "^6.1.5",
-		"@types/roarr": "^2.14.5",
-		"@typescript-eslint/eslint-plugin": "^6.9.0",
-		"@typescript-eslint/parser": "^6.9.0",
-		"@unpic/svelte": "^0.0.31",
+		"@tanstack/svelte-query": "^5.8.3",
+		"@trpc/client": "^10.43.3",
+		"@trpc/server": "^10.43.3",
+		"@types/convict": "^6.1.6",
+		"@types/roarr": "^2.14.6",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
+		"@unpic/svelte": "^0.0.38",
 		"@zerodevx/svelte-img": "^2.1.0",
 		"autoprefixer": "^10.4.16",
 		"bcp-47": "^2.1.0",
 		"browserslist": "^4.22.1",
 		"browserslist-useragent-regexp": "^4.1.0",
-		"change-case": "^4.1.2",
+		"change-case": "^5.1.2",
 		"commitizen": "^4.3.0",
 		"convict": "^6.2.4",
 		"dayjs": "^1.11.10",
-		"eslint": "^8.52.0",
+		"eslint": "^8.53.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-import-resolver-custom-alias": "^1.3.2",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.0",
-		"eslint-plugin-svelte": "^2.34.0",
+		"eslint-plugin-svelte": "^2.35.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
-		"histoire": "^0.17.4",
+		"histoire": "^0.17.5",
 		"husky": "^8.0.3",
-		"inquirer": "8.2.6",
-		"lightningcss": "^1.22.0",
-		"maskdata": "^1.2.3",
+		"inquirer": "9.2.12",
+		"lightningcss": "^1.22.1",
+		"maskdata": "^1.2.6",
 		"network-information-types": "^0.1.1",
 		"neverthrow": "^6.1.0",
 		"postcss": "^8.4.31",
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^12.0.1",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"prettier-plugin-tailwindcss": "^0.4.1",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.1.0",
+		"prettier-plugin-tailwindcss": "^0.5.7",
 		"schema-dts": "^1.1.2",
-		"semantic-release": "^22.0.5",
+		"semantic-release": "^22.0.7",
 		"serializr": "^3.0.2",
 		"supabase": "^1.110.1",
-		"svelte": "^4.2.2",
-		"svelte-check": "^3.5.2",
+		"svelte": "^4.2.3",
+		"svelte-check": "^3.6.0",
 		"svelte-legos": "^0.2.2",
-		"svelte-meta-tags": "^3.0.4",
+		"svelte-meta-tags": "^3.1.0",
 		"svelte-modals": "^1.3.0",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"sveltekit-embed": "^0.0.12",
 		"sveltekit-sitemap": "^1.0.21",
-		"sveltekit-superforms": "^1.9.0",
+		"sveltekit-superforms": "^1.10.1",
 		"tailwindcss": "^3.3.5",
 		"trpc-svelte-query-adapter": "^2.1.0",
 		"trpc-sveltekit": "^3.5.22",
@@ -107,7 +107,7 @@
 		"vite-plugin-markdown": "^2.1.0",
 		"vite-plugin-watch": "^0.2.0",
 		"vitest": "^0.34.6",
-		"windy-radix-palette": "2.0.0-beta.0",
+		"windy-radix-palette": "2.0.0-beta.7",
 		"wretch": "^2.7.0",
 		"zod": "^3.22.4"
 	},
@@ -115,8 +115,8 @@
 	"dependencies": {
 		"@inlang/paraglide-js": "1.0.0-prerelease.9",
 		"@roarr/browser-log-writer": "^1.3.0",
-		"@sentry/sveltekit": "^7.75.1",
-		"roarr": "^7.15.1",
+		"@sentry/sveltekit": "^7.80.0",
+		"roarr": "^7.18.3",
 		"web-vitals": "^3.5.0"
 	},
 	"pnpm": {
