--- a/package.json
+++ b/package.json
@@ -75,10 +75,12 @@
 		"husky": "^8.0.3",
 		"inquirer": "9.2.12",
 		"lightningcss": "^1.22.1",
+		"lucide-svelte": "^0.292.0",
 		"maskdata": "^1.2.6",
 		"network-information-types": "^0.1.1",
 		"neverthrow": "^6.1.0",
 		"postcss": "^8.4.31",
+		"postcss-comment": "^2.0.0",
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^12.0.1",
 		"prettier": "^3.1.0",
@@ -116,7 +118,11 @@
 		"@inlang/paraglide-js": "1.0.0-prerelease.9",
 		"@roarr/browser-log-writer": "^1.3.0",
 		"@sentry/sveltekit": "^7.80.0",
+		"bits-ui": "^0.9.4",
+		"clsx": "^2.0.0",
 		"roarr": "^7.18.3",
+		"tailwind-merge": "^2.0.0",
+		"tailwind-variants": "^0.1.18",
 		"web-vitals": "^3.5.0"
 	},
 	"pnpm": {
