--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
 		"@sentry/sveltekit": "^7.80.0",
 		"bits-ui": "^0.9.4",
 		"clsx": "^2.0.0",
+		"formsnap": "^0.4.1",
 		"roarr": "^7.18.3",
 		"tailwind-merge": "^2.0.0",
 		"tailwind-variants": "^0.1.18",
