--- a/package.json
+++ b/package.json
@@ -94,11 +94,13 @@
 		"supabase": "^1.110.1",
 		"svelte": "^4.2.3",
 		"svelte-check": "^3.6.0",
+		"svelte-french-toast": "^1.2.0",
 		"svelte-legos": "^0.2.2",
 		"svelte-meta-tags": "^3.1.0",
 		"svelte-modals": "^1.3.0",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"sveltekit-embed": "^0.0.12",
+		"sveltekit-flash-message": "^2.2.2",
 		"sveltekit-sitemap": "^1.0.21",
 		"sveltekit-superforms": "^1.10.1",
 		"tailwindcss": "^3.3.5",
