--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@histoire/plugin-svelte": "^0.17.4",
 		"@iconify/svelte": "^3.1.4",
 		"@inlang/paraglide-js": "1.0.0-prerelease.9",
+		"@inlang/paraglide-js-adapter-vite": "1.0.0-prerelease.1",
 		"@macfja/svelte-persistent-store": "^2.4.1",
 		"@melt-ui/pp": "^0.1.4",
 		"@melt-ui/svelte": "^0.61.1",
